--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link a href="style.css" rel="stylesheet">
     <link rel="icon" href="Logos.png" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 <body>
   <div class="container">
@@ -159,67 +158,47 @@
     <p>
      Jelajahi sumber daya pengembangan Intel dan cari alat serta perangkat lunak berdasarkan nama, jenis, sistem operasi, atau topik.
     </p>
-    <div class="grid">
-     <div class="grid-left">
-      <div class="grid-item grid-item-large">
-       <i class="fas fa-brain">
-       </i>
-       <h2>
-        AI
-       </h2>
-       <p>
-        Alat dan sumber daya pengembangan membantu Anda mempersiapkan, membangun, menerapkan, dan menskalakan solusi AI Anda.
-       </p>
-       <a class="explore-button" href="#" onclick="RedirectTointol()">
-        Jelajahi
-       </a>
+    <div class="container9">
+      <div class="left-panel">
+          <div class="icon"><img src="otak.PNG"></div>
+          <h2>AI</h2>
+          <p>Alat dan sumber daya pengembangan membantu Anda mempersiapkan, membangun, menerapkan, dan menskalakan solusi AI Anda.</p>
+          <button class="explore-button">Jelajahi</button>
       </div>
-     </div>
-     <div class="grid-right">
-      <div class="grid-item">
-       <i class="fas fa-tools">
-       </i>
-       <h2>
-        Alat Bantu Pengembang
-       </h2>
+      <div class="right-panel">
+          <div class="card"> 
+              <div class="card-icon"><img src="bengkel.PNG"></div>
+              <p>Alat Bantu Pengembang</p>
+          </div>
+          <div class="card">
+              <div class="card-icon"><img src="box.PNG"></div>
+              <p>Sumber Terbuka</p>
+          </div>
+          <div class="card">
+              <div class="card-icon"><img src="Gaming.PNG"></div>
+              <p>Gaming</p>
+          </div>
+          <div class="card">
+              <div class="card-icon"><img src="cloud.PNG"></div>
+              <p>Cloud</p>
+          </div>
+          <div class="card">
+              <div class="card-icon"><img src="otak.PNG"></div>
+              <p>PC AI</p>
+          </div>
+          <div class="card">
+              <div class="card-icon"><img src="Branch.PNG"></div>
+              <p>Edge</p>
+          </div>
+          <div class="card">
+              <div class="card-icon"><img src="chipset.PNG"></div>
+              <p>HPC</p>
+          </div>
+          <div class="card">
+              <div class="card-icon"><img src="idk.PNG"></div>
+              <p>Jelajahi Semua</p>
+          </div>
       </div>
-      <div class="grid-item">
-       <i class="fas fa-box-open">
-       </i>
-       <h2>
-        Sumber Terbuka
-       </h2>
-      </div>
-      <div class="grid-item">
-       <i class="fas fa-gamepad">
-       </i>
-       <h2>
-        Gaming
-       </h2>
-      </div>
-      <div class="grid-item">
-       <i class="fas fa-cloud">
-       </i>
-       <h2>
-        Cloud
-       </h2>
-      </div>
-      <div class="grid-item">
-       <i class="fas fa-microchip">
-       </i>
-       <h2>
-        HPC
-       </h2>
-      </div>
-      <div class="grid-item">
-       <i class="fas fa-plus-circle">
-       </i>
-       <h2>
-        Jelajahi Semua
-       </h2>
-      </div>
-     </div>
-    </div>
    </div>
    <div class="footer">
     <div class="links">
