--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Desain</title>
     <link a href="style.css" rel="stylesheet">
-    <link rel="icon" href="Logos.png" type="image/x-icon">
+    <link rel="icon" href="Logos.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -37,7 +37,8 @@
     <span>Sederhanakan Perjalanan AI Anda</span>
   </div>
   <div class="paragraf">
-    <p>Hadirkan AI dalam skala besar di seluruh cloud, pusat data, edge, dan klien dengan portofolio perangkat keras dan perangkat lunak kami.</p>
+    <p>Hadirkan AI dalam skala besar di seluruh cloud, pusat data, </p>
+    <p>edge, dan klien dengan portofolio perangkat keras dan perangkat lunak kami.</p>
   </div>
   <div class="Slider">
     <div class="konten">
@@ -140,66 +141,68 @@
      <img alt="A person working on a laptop in a server room with blue lighting." height="800" src="https://intelcorp.scene7.com/is/image/intelcorp/young-caucasian-man-with-a-tablet-computer:854-854">
    </div>
   </div>
-   <div class="container0">
+  <div class="container0">
     <div class="header0">
-     <div>
-      <span>
-       Alat
-      </span>
+      <div>
+       <span>
+        Alat
+       </span>
+     </div>
+     <div class="header4">
+       <img src="Inteldev.PNG" width="100px">
+       <button id="join-button0" onclick="redirectTojelajah()"> Jelajah</button>
+     </div>
+     </div>
+     <h1>
+      Sumber daya pengembang
+     </h1>
+     <p>
+      Jelajahi sumber daya pengembangan Intel dan cari alat serta perangkat lunak berdasarkan nama, jenis, sistem operasi, atau topik.
+     </p>
+     <div class="container9">
+       <div class="left-panel">
+           <div class="icon"><img src="otak.PNG"></div>
+           <h2>AI</h2>
+           <p>Alat dan sumber daya pengembangan membantu Anda mempersiapkan, membangun, menerapkan, dan menskalakan solusi AI Anda.</p>
+           <button class="explore-button">Jelajahi</button>
+       </div>
+       <div class="right-panel">
+           <div class="card"> 
+               <div class="card-icon"><img src="bengkel.PNG"></div>
+               <p>Alat Bantu Pengembang</p>
+           </div>
+           <div class="card">
+               <div class="card-icon"><img src="box.PNG"></div>
+               <p>Sumber Terbuka</p>
+           </div>
+           <div class="card">
+               <div class="card-icon"><img src="Gaming.PNG"></div>
+               <p>Gaming</p>
+           </div>
+           <div class="card">
+               <div class="card-icon"><img src="cloud.PNG"></div>
+               <p>Cloud</p>
+           </div>
+           <div class="card">
+               <div class="card-icon"><img src="otak.PNG"></div>
+               <p>PC AI</p>
+           </div>
+           <div class="card">
+               <div class="card-icon"><img src="Branch.PNG"></div>
+               <p>Edge</p>
+           </div>
+           <div class="card">
+               <div class="card-icon"><img src="chipset.PNG"></div>
+               <p>HPC</p>
+           </div>
+           <div class="card">
+               <div class="card-icon"><img src="idk.PNG"></div>
+               <p>Jelajahi Semua</p>
+           </div>
+       </div>
     </div>
-    <div class="header4">
-      <img src="Inteldev.PNG" width="100px">
-      <button id="join-button0" onclick="redirectTojelajah()"> Jelajah</button>
-    </div>
-    </div>
-    <h1>
-     Sumber daya pengembang
-    </h1>
-    <p>
-     Jelajahi sumber daya pengembangan Intel dan cari alat serta perangkat lunak berdasarkan nama, jenis, sistem operasi, atau topik.
-    </p>
-    <div class="container9">
-      <div class="left-panel">
-          <div class="icon"><img src="otak.PNG"></div>
-          <h2>AI</h2>
-          <p>Alat dan sumber daya pengembangan membantu Anda mempersiapkan, membangun, menerapkan, dan menskalakan solusi AI Anda.</p>
-          <button class="explore-button">Jelajahi</button>
-      </div>
-      <div class="right-panel">
-          <div class="card"> 
-              <div class="card-icon"><img src="bengkel.PNG"></div>
-              <p>Alat Bantu Pengembang</p>
-          </div>
-          <div class="card">
-              <div class="card-icon"><img src="box.PNG"></div>
-              <p>Sumber Terbuka</p>
-          </div>
-          <div class="card">
-              <div class="card-icon"><img src="Gaming.PNG"></div>
-              <p>Gaming</p>
-          </div>
-          <div class="card">
-              <div class="card-icon"><img src="cloud.PNG"></div>
-              <p>Cloud</p>
-          </div>
-          <div class="card">
-              <div class="card-icon"><img src="otak.PNG"></div>
-              <p>PC AI</p>
-          </div>
-          <div class="card">
-              <div class="card-icon"><img src="Branch.PNG"></div>
-              <p>Edge</p>
-          </div>
-          <div class="card">
-              <div class="card-icon"><img src="chipset.PNG"></div>
-              <p>HPC</p>
-          </div>
-          <div class="card">
-              <div class="card-icon"><img src="idk.PNG"></div>
-              <p>Jelajahi Semua</p>
-          </div>
-      </div>
-   </div>
+  </div>
+   
    <div class="footer">
     <div class="links">
      <a href="#">
