--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <span>Sederhanakan Perjalanan AI Anda</span>
   </div>
   <div class="paragraf">
-    <p>Hadirkan AI dalam skala besar di seluruh cloud, pusat data, </p>
-    <p>edge, dan klien dengan portofolio perangkat keras dan perangkat lunak kami.</p>
+    <p>Hadirkan AI dalam skala besar di seluruh cloud, pusat data, edge, dan klien dengan portofolio perangkat keras dan perangkat lunak kami.</p>
   </div>
   <div class="Slider">
     <div class="konten">
@@ -205,30 +204,14 @@
    
    <div class="footer">
     <div class="links">
-     <a href="#">
-      Informasi Perusahaan
-     </a>
-     <a href="#">
-      Komitmen Kami
-     </a>
-     <a href="#">
-      Keragaman &amp; Keterkaitan
-     </a>
-     <a href="#">
-      Hubungan Investor
-     </a>
-     <a href="#">
-      Hubungi Kami
-     </a>
-     <a href="#">
-      Ruang Berita
-     </a>
-     <a href="#">
-      Peta Situs
-     </a>
-     <a href="#">
-      Pekerjaan
-     </a>
+     <a href="#">Informasi Perusahaan</a>
+     <a href="#">Komitmen Kami</a>
+     <a href="#"> Keragaman &amp; Keterkaitan</a>
+     <a href="#">Hubungan Investor</a>
+     <a href="#">Hubungi Kami</a>
+     <a href="#">Ruang Berita</a>
+     <a href="#">Peta Situs</a>
+     <a href="#">Pekerjaan</a>
     </div>
     <div class="social-icons">
      <a href="#">
@@ -252,28 +235,23 @@
      <img alt="Intel logo" height="50" src="ckckck.PNG" width="80"/>
     </div>
     <div class="legal">
-     <a href="#">
-      © Intel Corporation
-     </a>
-     <a href="#">
-      Syarat Penggunaan
-     </a>
-     <a href="#">
-      *Merek Dagang
-     </a>
-     <a href="#">
-      Cookie
-     </a>
-     <a href="#">
-      Privasi
-     </a>
-     <a href="#">
-      Transparansi Rantai Pasokan
-     </a>
+     <a href="#"> © Intel Corporation</a>
+     <a href="#">Syarat Penggunaan</a>
+     <a href="#">*Merek Dagang</a>
+     <a href="#">Cookie</a>
+     <a href="#">Privasi</a>
+     <a href="#">Transparansi Rantai Pasokan</a>
     </div>
     <div class="disclaimer">
       Teknologi Intel mungkin memerlukan dukungan perangkat keras, perangkat lunak, atau aktivasi layanan. // Tidak ada produk atau komponen yang sepenuhnya aman. // Biaya dan hasil Anda mungkin berbeda. // Performa bervariasi berdasarkan penggunaan, konfigurasi, dan faktor lainnya. // Lihat Pemberitahuan dan Pembebasan Tanggung Jawab hukum kami selengkapnya. // Intel berkomitmen menghormati hak asasi manusia dan menghindari keterlibatan dalam masalah pelanggaran hak asasi manusia. Lihat Prinsip Hak Asasi Manusia Global Intel. Produk dan perangkat lunak Intel® hanya dimaksudkan untuk digunakan dalam aplikasi yang tidak menyebabkan atau berkontribusi pada pelanggaran hak asasi manusia yang diakui secara internasional.
     </div>
    </div>
+   <div class="fixed-menu">
+    <a href="#unduhan">Unduhan</a>
+    <span>|</span>
+    <a href="#produk">Produk</a>
+    <span>|</span>
+    <a href="#spesifikasi">Spesifikasi</a>
+</div>
 </body>
 </html>
