--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                <p>Cloud</p>
            </div>
            <div class="card">
-               <div class="card-icon"><img src="otak.PNG"></div>
+               <div class="card-icon"><img src="otak2.PNG"></div>
                <p>PC AI</p>
            </div>
            <div class="card">
